Bugfix: css for 731 (MSUGRID) is missing .node-theme-page-731 resulting in the theme changes bleeding through outside of the subtheme (again)
This bug was re-introduced due to improper git usage by amapley.

ticket: www-1392

--- a/sites/all/themes/mcneese_www/css/all/www-all-page-731.css
+++ b/sites/all/themes/mcneese_www/css/all/www-all-page-731.css
@@ -410,7 +410,7 @@
     padding: 0px;
 }
 
-.mcneese #mcneese-page-side .workbench_menu .menu_item > .menu_item-children .menu_item > .menu_item-text {
+.mcneese.node-theme-page-731 #mcneese-page-side .workbench_menu .menu_item > .menu_item-children .menu_item > .menu_item-text {
     border-top: 1px solid #eaeaea;
 }
 
